force-app/main/default/objects/Product2/fields/Appt__c.field-meta.xml
<CustomField>
    <fullName>Appt__c</fullName>
    <label>Appt #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>