force-app/main/default/objects/Product2/fields/Available_for_online_sale__c.field-meta.xml
<CustomField>
    <fullName>Available_for_online_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For Online Sale</label>
    <type>Checkbox</type>
</CustomField>