force-app/main/default/objects/Product2/fields/Balcony_area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Balcony_area_Sqft__c</fullName>
    <label>Balcony Area Sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>