force-app/main/default/objects/Product2/fields/Balcony_area_Sqmt__c.field-meta.xml
<CustomField>
    <fullName>Balcony_area_Sqmt__c</fullName>
    <label>Balcony Area Sqmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>