force-app/main/default/objects/Product2/fields/Booked_Online_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_Online_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked Online By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Booked Online By)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>