force-app/main/default/objects/Product2/fields/Cancel_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Sales_Order__c</fullName>
    <label>Cancel Sales Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>