force-app/main/default/objects/Product2/fields/Cancel_Sales_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Sales_Order_Date__c</fullName>
    <label>Cancel Sales Order Date</label>
    <type>Date</type>
</CustomField>