force-app/main/default/objects/Product2/fields/Cancellation_SO_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_SO_Date__c</fullName>
    <label>Cancellation SO Date</label>
    <type>Date</type>
</CustomField>