force-app/main/default/objects/Product2/fields/Cancellation_SO_No__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_SO_No__c</fullName>
    <label>Cancellation SO No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>