force-app/main/default/objects/Product2/fields/Carpet_Area_RERA_Carpet__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_RERA_Carpet__c</fullName>
    <label>RERA Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>