force-app/main/default/objects/Product2/fields/Carpet_Area_True_Carpet__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_True_Carpet__c</fullName>
    <label>Carpet Area - Sq ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>