force-app/main/default/objects/Product2/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <length>155</length>
    <type>Text</type>
</CustomField>