force-app/main/default/objects/Product2/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <length>155</length>
    <type>Text</type>
</CustomField>