force-app/main/default/objects/Product2/fields/Design_Style__c.field-meta.xml
<CustomField>
    <fullName>Design_Style__c</fullName>
    <label>Design Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Club House View</fullName>
            </value>
            <value>
                <fullName>Road View</fullName>
            </value>
            <value>
                <fullName>Pool View</fullName>
            </value>
            <value>
                <fullName>Garden View</fullName>
            </value>
            <value>
                <fullName>Hill View</fullName>
            </value>
            <value>
                <fullName>Lake View</fullName>
            </value>
            <value>
                <fullName>River View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>