force-app/main/default/objects/Product2/fields/Different_Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>Different_Unit_Area__c</fullName>
    <label>Different Unit Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>