force-app/main/default/objects/Product2/fields/EVBT__c.field-meta.xml
<CustomField>
    <fullName>EVBT__c</fullName>
    <label>EVBT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>