force-app/main/default/objects/Product2/fields/Facets__c.field-meta.xml
<CustomField>
    <fullName>Facets__c</fullName>
    <label>Facets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>