force-app/main/default/objects/Product2/fields/Floor_Band__c.field-meta.xml
<CustomField>
    <fullName>Floor_Band__c</fullName>
    <formula>IF(VALUE(Text(Floor_No__c))&lt;=10, &apos;0-10&apos; , 
 IF( VALUE(Text(Floor_No__c))&lt;=20, &apos;11-20&apos; , 
IF( VALUE(Text(Floor_No__c))&lt;=30, &apos;21-30&apos; ,
 IF(VALUE(Text(Floor_No__c))&gt;30, &apos;31+&apos; , NULL)
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Band</label>
    <type>Text</type>
</CustomField>