force-app/main/default/objects/Product2/fields/Inventory_Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Blocked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Blocked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>