force-app/main/default/objects/Product2/fields/Inventory_Master__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Master__c</fullName>
    <label>Inventory Master</label>
    <length>50</length>
    <type>Text</type>
</CustomField>