force-app/main/default/objects/Product2/fields/Last_hold_by__c.field-meta.xml
<CustomField>
    <fullName>Last_hold_by__c</fullName>
    <label>Last hold by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>