force-app/main/default/objects/Product2/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Material Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>