force-app/main/default/objects/Product2/fields/No_of_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bathrooms__c</fullName>
    <label>No of Bathrooms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>