force-app/main/default/objects/Product2/fields/Parking_Including__c.field-meta.xml
<CustomField>
    <fullName>Parking_Including__c</fullName>
    <formula>Project__r.Parking_Included_per_unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Including</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>