force-app/main/default/objects/Product2/fields/Possession_Status__c.field-meta.xml
<CustomField>
    <fullName>Possession_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possession Status</label>
    <type>Checkbox</type>
</CustomField>