force-app/main/default/objects/Product2/fields/Primary_Area_Definition__c.field-meta.xml
<CustomField>
    <fullName>Primary_Area_Definition__c</fullName>
    <formula>IF( CONTAINS(TEXT(Unit_Category__c), &apos;1&apos;),
    200.00,
    IF( CONTAINS(TEXT(Unit_Category__c), &apos;2&apos;),
        400.00,
        IF( CONTAINS(TEXT(Unit_Category__c), &apos;3&apos;),
            600.00,
            IF( CONTAINS(TEXT(Unit_Category__c), &apos;4&apos;),
                800.00,
                IF( CONTAINS(TEXT(Unit_Category__c), &apos;4.5&apos;),
                    1000.00,
                    1200.00
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Area Definition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>