force-app/main/default/objects/Product2/fields/Product_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Order__c</fullName>
    <formula>CASE(TEXT(Family), &apos;Saleable Unit&apos;, 1, &apos;Parking&apos;, 2,&apos;Other Charges&apos;,3,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>