force-app/main/default/objects/Product2/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Status</label>
    <type>Checkbox</type>
</CustomField>