force-app/main/default/objects/Product2/fields/Rera_carpet_Area_sq_meter__c.field-meta.xml
<CustomField>
    <fullName>Rera_carpet_Area_sq_meter__c</fullName>
    <formula>Carpet_Area_RERA_Carpet__c / 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rera carpet Area (sq. meter)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>