force-app/main/default/objects/Product2/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raymond Realty</fullName>
            </value>
            <value>
                <fullName>Raymond Realty-Affordable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>