force-app/main/default/objects/Product2/fields/SAP_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>SAP_Channel_Partner__c</fullName>
    <label>SAP Channel Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>