force-app/main/default/objects/Product2/fields/SAP_CO_Applicant__c.field-meta.xml
<CustomField>
    <fullName>SAP_CO_Applicant__c</fullName>
    <label>SAP CO Applicant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>