force-app/main/default/objects/Product2/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <label>SAP Customer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>