force-app/main/default/objects/Product2/fields/SAP_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Representative__c</fullName>
    <label>SAP Sales Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>