force-app/main/default/objects/Product2/fields/SF_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>SF_Channel_Partner__c</fullName>
    <label>SF Channel Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>