force-app/main/default/objects/Product2/fields/SF_CO_Applicant__c.field-meta.xml
<CustomField>
    <fullName>SF_CO_Applicant__c</fullName>
    <label>SF CO Applicant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>