force-app/main/default/objects/Product2/fields/SF_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Customer_Number__c</fullName>
    <label>SF Customer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>