force-app/main/default/objects/Product2/fields/SF_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>SF_Sales_Representative__c</fullName>
    <label>SF Sales Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>