force-app/main/default/objects/Product2/fields/type_of_unit_by_size__c.field-meta.xml
<CustomField>
    <fullName>type_of_unit_by_size__c</fullName>
    <formula>IF(CONTAINS(Name,&apos;Haven&apos;) ,&apos;Haven&apos; , IF(CONTAINS(Name,&apos;Nest&apos;) ,&apos;Nest&apos;, Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>type of unit by size</label>
    <type>Text</type>
</CustomField>