force-app/main/default/objects/Product2/fields/Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category__c</fullName>
    <label>Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2BHK Apex</fullName>
            </value>
            <value>
                <fullName>2BHK Crest</fullName>
            </value>
            <value>
                <fullName>2 BHK Haven</fullName>
            </value>
            <value>
                <fullName>2 BHK Nest</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK Bliss</fullName>
            </value>
            <value>
                <fullName>3BHK Elite</fullName>
            </value>
            <value>
                <fullName>3BHK Eterna</fullName>
            </value>
            <value>
                <fullName>3 BHK Joy</fullName>
            </value>
            <value>
                <fullName>4.5 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK Nirvana</fullName>
            </value>
            <value>
                <fullName>Buzz</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Epitome</fullName>
            </value>
            <value>
                <fullName>Glitz</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Sky Suite</fullName>
            </value>
            <value>
                <fullName>Steller</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>2 BHK - Compact</fullName>
                <isActive>false</isActive>
                <label>2 BHK - Compact</label>
            </value>
            <value>
                <fullName>2 BHK - Large</fullName>
                <isActive>false</isActive>
                <label>2 BHK - Large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>