force-app/main/default/objects/Product2/fields/Unit_Category_formula__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category_formula__c</fullName>
    <formula>MID( Text(Unit_Category__c) , FIND(&quot;BHK&quot;, Text(Unit_Category__c)) + 4, LEN(Text(Unit_Category__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Category Formula</label>
    <type>Text</type>
</CustomField>