force-app/main/default/objects/Product2/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Released</fullName>
            </value>
            <value>
                <fullName>Available for Sale</fullName>
            </value>
            <value>
                <fullName>Blocked by Mgmt</fullName>
                <label>Blocked by management</label>
            </value>
            <value>
                <fullName>Blocked by Sales Head</fullName>
            </value>
            <value>
                <fullName>Refuge</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Cancelled Unit- AFS</fullName>
                <label>Cancellation-Available for Use</label>
            </value>
            <value>
                <fullName>Under Cancellation</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
                <isActive>false</isActive>
                <label>Available</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <isActive>false</isActive>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Blocked for Customer</fullName>
                <isActive>false</isActive>
                <label>Blocked for Customer</label>
            </value>
            <value>
                <fullName>Booked</fullName>
                <isActive>false</isActive>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Hold As Per HOD</fullName>
                <isActive>false</isActive>
                <label>Hold As Per HOD</label>
            </value>
            <value>
                <fullName>Hold By C P</fullName>
                <isActive>false</isActive>
                <label>Hold By C P</label>
            </value>
            <value>
                <fullName>Hold By Employee</fullName>
                <isActive>false</isActive>
                <label>Hold By Employee</label>
            </value>
            <value>
                <fullName>Hold For MOU</fullName>
                <isActive>false</isActive>
                <label>Hold For MOU</label>
            </value>
            <value>
                <fullName>Hold For Transfer</fullName>
                <isActive>false</isActive>
                <label>Hold For Transfer</label>
            </value>
            <value>
                <fullName>Management Hold</fullName>
                <isActive>false</isActive>
                <label>Management Hold</label>
            </value>
            <value>
                <fullName>Sold - C</fullName>
                <isActive>false</isActive>
                <label>Sold - C</label>
            </value>
            <value>
                <fullName>Sold - T</fullName>
                <isActive>false</isActive>
                <label>Sold - T</label>
            </value>
            <value>
                <fullName>Sold By Transfer</fullName>
                <isActive>false</isActive>
                <label>Sold By Transfer</label>
            </value>
            <value>
                <fullName>Transferred</fullName>
                <isActive>false</isActive>
                <label>Transferred</label>
            </value>
            <value>
                <fullName>Under Transfer</fullName>
                <isActive>false</isActive>
                <label>Under Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>