force-app/main/default/objects/Product2/fields/Unsold_Age__c.field-meta.xml
<CustomField>
    <fullName>Unsold_Age__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Unit_Status__c,&apos;Sold&apos; )), TODAY() -  DATEVALUE( CreatedDate ),0   )</formula>
    <label>Unsold Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>