force-app/main/default/objects/Product2/validationRules/Prior_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Prior_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsActive = FALSE,
    TEXT( Unit_Status__c ) = &apos;Cancelled Unit- AFS&apos;
)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Test</errorMessage>
</ValidationRule>